Added cloneFileFromJar to FileUtils, added JAVA_VERSION to SystemUtils, modified Updater and VersionChecker to include connection/read timeouts, updated VersionChecker/versionchecker.php to handle information better, some lang updates that wont matter soon